--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^24.0.13",
     "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "es-check": "^5.0.0",
